[gd_scene load_steps=9 format=3 uid="uid://dwj4jpab7xioc"]

[ext_resource type="Texture2D" uid="uid://dyqj6u45t43te" path="res://assets/2d/gui/card.png" id="1_4lemr"]
[ext_resource type="Script" path="res://scripts/screens/player_select.gd" id="1_36q6o"]
[ext_resource type="Texture2D" uid="uid://ceqeh25san4m0" path="res://assets/2d/player/player_fire_avatar.png" id="2_553ey"]
[ext_resource type="PackedScene" uid="uid://tv7ha8ik8dmq" path="res://scenes/gui/default/label_title_default.tscn" id="2_ywrq4"]
[ext_resource type="PackedScene" uid="uid://b6rwglmsb83n0" path="res://scenes/gui/default/label_default.tscn" id="3_46s6r"]
[ext_resource type="Texture2D" uid="uid://chq7027847m75" path="res://assets/2d/player/player_water_avatar.png" id="4_5t16s"]
[ext_resource type="Texture2D" uid="uid://bf2v1xln0adnr" path="res://assets/2d/player/player_wind_avatar.png" id="5_6dsyy"]
[ext_resource type="PackedScene" uid="uid://cfun5jfkr0e74" path="res://scenes/gui/default/button_default.tscn" id="6_ba6k5"]

[node name="PlayerSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_36q6o")

[node name="Filter" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Title" parent="." instance=ExtResource("2_ywrq4")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -384.0
offset_right = 384.0
grow_horizontal = 2
text = "$_CHOOSE_CHARACTER"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -800.0
offset_top = -250.0
offset_right = 800.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Option01" type="ColorRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(530, 530)
layout_mode = 2
color = Color(0.564706, 0.882353, 0.0705882, 1)

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Option01"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -255.0
offset_right = 250.0
offset_bottom = 255.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_4lemr")

[node name="Avatar" type="TextureRect" parent="HBoxContainer/Option01/TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = 50.0
offset_right = 32.0
offset_bottom = 114.0
grow_horizontal = 2
texture = ExtResource("2_553ey")

[node name="PlayerName" parent="HBoxContainer/Option01/TextureRect" instance=ExtResource("3_46s6r")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.5
offset_top = -34.5
offset_right = 127.5
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Player Fire"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" parent="HBoxContainer/Option01/TextureRect" instance=ExtResource("3_46s6r")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -57.5
offset_top = -119.0
offset_right = 57.5
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Desc"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Option02" type="ColorRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(530, 530)
layout_mode = 2
color = Color(0.564232, 0.882372, 0.0704393, 1)

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Option02"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -255.0
offset_right = 250.0
offset_bottom = 255.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_4lemr")

[node name="Avatar" type="TextureRect" parent="HBoxContainer/Option02/TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = 50.0
offset_right = 32.0
offset_bottom = 114.0
grow_horizontal = 2
texture = ExtResource("4_5t16s")

[node name="PlayerName" parent="HBoxContainer/Option02/TextureRect" instance=ExtResource("3_46s6r")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.5
offset_top = -34.5
offset_right = 127.5
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Player Water"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" parent="HBoxContainer/Option02/TextureRect" instance=ExtResource("3_46s6r")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -57.5
offset_top = -119.0
offset_right = 57.5
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Desc"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Option03" type="ColorRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(530, 530)
layout_mode = 2
color = Color(0.564232, 0.882372, 0.0704393, 1)

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Option03"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -255.0
offset_right = 250.0
offset_bottom = 255.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_4lemr")

[node name="Avatar" type="TextureRect" parent="HBoxContainer/Option03/TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = 50.0
offset_right = 32.0
offset_bottom = 114.0
grow_horizontal = 2
texture = ExtResource("5_6dsyy")

[node name="PlayerName" parent="HBoxContainer/Option03/TextureRect" instance=ExtResource("3_46s6r")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.5
offset_top = -34.5
offset_right = 127.5
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Player Wind"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" parent="HBoxContainer/Option03/TextureRect" instance=ExtResource("3_46s6r")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -57.5
offset_top = -119.0
offset_right = 57.5
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Desc"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Choose" parent="." instance=ExtResource("6_ba6k5")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -121.5
offset_top = -149.0
offset_right = 121.5
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
text = "$_CHOOSE"

[connection signal="pressed" from="Choose" to="." method="_on_choose_pressed"]
